--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
             content="IE=edge">
       <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
-      <title>Avaya Caller UI</title>
+      <title>Multi-Window Call UI</title>
       <link rel="stylesheet"
             href="./style.css"
             type="text/css">
 </head>
 
 <body>
-      <h1>Avaya Caller UI</h1>
+      <h1>Main FLow</h1>
+      The popup will handle the call logic and the user can interact with it using communication events.
+      
       <script src="./dist/bundle.js"
               type="module"></script>
+
+
+
 </body>
 
 </html>
